0.0.8
Fixed exporting in qt5.
User editing.
Better import/export.
Done 'About' boxes.
Added resources to install.

0.0.7
Done live search.
Redone preview/export/
Redone import.

0.0.5
Done .TP,.IP,.EX,.EE,.SM ...
Fixed getting properties from manpage.
Open now closes current doc 1st.
Done manpage properties.
Added build for qt5, (use USEQTVERSION=5 ./autogen.sh --prefix=/usr ).
Done preview ( uses xterm ).
Added clear.
Added italic/undeline.
Added bold.
Code clean.
Done close tab.
Fixed saveing/restoreing window position/size.
Redone save file.
Fixed emphasised text ending/starting in spaces
Fixed export emphasised text embeded in string.
Save last load folder.
Save last save folder.
Basic export of manpag.
Basic import of manpage.

0.0.0-0.0.4
Internal.